--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -6,20 +6,42 @@ body {
 	min-width: 320px !important;
 }
 
-hr {
-	margin: 10px 0;
+a:link {
+	text-decoration: none;
 }
+
+a:active {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+/*--------------
+----CAROUSEL----
+--------------*/
 
 .carousel-img {
 	width: 1140px;
 	height: 500px;
 }
 
-.kanji-card {
-	transition: all .3s;
+/*--------------
+------HOME------
+--------------*/
+
+/*Cartes*/
+[class$="-card"] {
+	transition: all .4s;
 }
 
-.kanji-card:hover {
-	text-decoration: none;
+#home-kanji .kanji-card:hover {
 	background: rgb(69, 77, 84) !important;
 }
+
+.kanji-card
