--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -53,6 +53,12 @@ a:hover {
 	width: 20%;
 }
 
+/*------------------
+------RESEARCH------
+------------------*/
+
+
+
 /*---------------
 ------ERROR------
 ---------------*/
@@ -68,3 +74,4 @@ a:hover {
 #footer {
 	padding: 10px 0 !important;
 }
+
