--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -57,7 +57,9 @@ a:hover {
 ------RESEARCH------
 ------------------*/
 
-
+.word-break {
+	word-break: break-all !important;
+}
 
 /*---------------
 ------ERROR------
