--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -22,6 +22,10 @@ a:hover {
 	text-decoration: none;
 }
 
+.custom-danger {
+	background: #e87d88;
+}
+
 /*--------------
 ----CAROUSEL----
 --------------*/
