--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -22,6 +22,10 @@ a:hover {
 	text-decoration: none;
 }
 
+.custom-success {
+	background: #5bd778;
+}
+
 .custom-danger {
 	background: #e87d88;
 }
@@ -62,6 +66,14 @@ a:hover {
 
 .word-break {
 	word-break: break-all !important;
+}
+
+.category {
+	width: 40%;
+}
+
+.result-data {
+	width: 60%;
 }
 
 /*---------------
